FIxing display and moving components on nasa-science dashboard to improve visibility.

--- a/custom.css
+++ b/custom.css
@@ -51,6 +51,10 @@ a:hover {
     color: white !important; /* White text */
 }
 
+.card-header.highlight {
+  background-color: #bf4105;
+}
+
   /* --- Value Box Styling --- */
 
 .value-box-grid {
